--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						</div>
 						<div class="content">
 							<h3><p style="color:#0f061d";>Data visualisation</p></h3>
-						<span class="image main"><img src="C:\Users\Romu\Desktop\Online\images\Rplot.jpeg" alt="" width="10" height="250"/></span>
+						<span class="image main"><img src="images\Rplot.jpeg" alt="" width="10" height="250"/></span>
 						</div>
 						<nav>
 							<ul>
